unpackaged/main/default/objects/FON_Credit__c/FON_Credit__c.object-meta.xml
<CustomObject>
    <label>FON-Credit</label>
    <nameField>
        <label>FON-Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FON Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>