unpackaged/main/default/objects/FON_Credit__c/fields/Business_Leadership_Track__c.field-meta.xml
<CustomField>
    <fullName>Business_Leadership_Track__c</fullName>
    <label>Business Leadership Track</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Council (40)</fullName>
            </value>
            <value>
                <fullName>associations (30)</fullName>
            </value>
            <value>
                <fullName>community (30)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>