unpackaged/main/default/objects/FON_Credit__c/fields/CEU_credits__c.field-meta.xml
<CustomField>
    <fullName>CEU_credits__c</fullName>
    <label>CEU credits</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>