unpackaged/main/default/objects/FON_Credit__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FON Credits</relationshipLabel>
    <relationshipName>FON_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>