unpackaged/main/default/objects/FON_Credit__c/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEU</fullName>
            </value>
            <value>
                <fullName>Courses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>