unpackaged/main/default/objects/FON_Credit__c/fields/Do_you_hold_CRS_designation_for_1yr__c.field-meta.xml
<CustomField>
    <fullName>Do_you_hold_CRS_designation_for_1yr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you hold CRS designation for &gt;1yr</label>
    <type>Checkbox</type>
</CustomField>