unpackaged/main/default/objects/FON_Credit__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>FON Credits</relationshipLabel>
    <relationshipName>FON_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>