unpackaged/main/default/objects/FON_Credit__c/fields/Event_Venue__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue__c</fullName>
    <formula>Venue__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Venue</label>
    <type>Text</type>
</CustomField>