unpackaged/main/default/objects/FON_Credit__c/fields/Number_Of_CME_Credits_earned__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_CME_Credits_earned__c</fullName>
    <label>Number Of CME Credits earned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>