unpackaged/main/default/objects/FON_Credit__c/fields/Number_Of_PMN_Courses__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_PMN_Courses__c</fullName>
    <label>Number Of PMN Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>