unpackaged/main/default/objects/FON_Credit__c/fields/PMN_Business_referral_Track__c.field-meta.xml
<CustomField>
    <fullName>PMN_Business_referral_Track__c</fullName>
    <label>PMN Business referral Track</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To/from another national Council member = 10 points each</fullName>
            </value>
            <value>
                <fullName>To/from a non-Council member = 5 points each</fullName>
            </value>
            <value>
                <fullName>From a client = 2 points each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>