unpackaged/main/default/objects/FON_Credit__c/fields/Program_Profile__c.field-meta.xml
<CustomField>
    <fullName>Program_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Profile</label>
    <referenceTo>ProgramApi__Program_Profile__c</referenceTo>
    <relationshipLabel>FON Credits</relationshipLabel>
    <relationshipName>FON_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>