unpackaged/main/default/objects/FON_Credit__c/fields/Session_name_to__c.field-meta.xml
<CustomField>
    <fullName>Session_name_to__c</fullName>
    <label>Session name of Credits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>