unpackaged/main/default/objects/FON_Credit__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <referenceTo>EventApi__Venue__c</referenceTo>
    <relationshipLabel>FON Credits</relationshipLabel>
    <relationshipName>FON_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>